tests/test-dirs/upstream-typing-recovery/original-tests/mixed_value_and_exception_patterns_under_guard.compilers.reference
File "mixed_value_and_exception_patterns_under_guard.ml", line 1:
Error: Multiple errors were encountered
File "mixed_value_and_exception_patterns_under_guard.ml", line 12, characters 4-32:
12 |   | Some x | exception Failure x when String.equal x "foo" ->
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Mixing value and exception patterns under when-guards is not supported.
File "mixed_value_and_exception_patterns_under_guard.ml", line 21, characters 6-34:
21 |     | Some _ | exception Not_found when a = "foo" -> ""
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  Mixing value and exception patterns under when-guards is not supported.
File "mixed_value_and_exception_patterns_under_guard.ml", line 27, characters 8-9:
27 | let k = u + 10
             ^
  The value u has type string but an expression was expected of type int
